resolution stop-point name overflow

--- a/Setram/Setram_gabarit_scolaire/main.css
+++ b/Setram/Setram_gabarit_scolaire/main.css
@@ -74,10 +74,11 @@
 }
 #header #stop-point-title-wrapper .title-content {
     position: absolute;
-    bottom: 3px;
+    bottom: 0;
+    padding-bottom: 2px;
     right: 8px;
     width: 135px;
-    line-height: 16px;
+    line-height: 17px;
     max-height: 36px;
     white-space: normal;
 }
